--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <h1>Munna Kumar</h1>
-<app-preserve-whitespace/>
+<!-- <app-preserve-whitespace/>
 <h1>DATA JEE</h1>
 <app-encapulation/>
 <app-parent/>
@@ -7,4 +7,5 @@
 <app-if-directive/>
 
 <app-switch/>
-<app-loop/>
+<app-loop/> -->
+<app-product-data/>
